apps/tdarr/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  labels:
    app.kubernetes.io/name: tdarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8265
    protocol: TCP
    targetPort: http
  - name: server
    port: 8266
    protocol: TCP
    targetPort: server
  selector:
    app.kubernetes.io/name: tdarr
