apps/tdarr/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  namespace: default
  labels:
    app.kubernetes.io/name: tdarr
  annotations:
    forecastle.stakater.com/appName: "Tdarr"
    forecastle.stakater.com/group: "Media"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: ""
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - encoder.${CLUSTER_DOMAIN_NAME}
    secretName: internal-ingress-cert
  rules:
  - host: encoder.${CLUSTER_DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tdarr
            port:
              name: http
